--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Momentum App</title>
   </head>
   <body>
+    <!-- clock -->
     <h2 id="clock">00:00:00</h2>
+
+    <!-- greeting -->
     <form class="hidden" id="login-form">
       <input
         required
@@ -18,18 +21,25 @@
       <input type="submit" value="Log In" />
     </form>
     <h1 class="hidden" id="greeting"></h1>
+
+    <!-- todo -->
     <form id="todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter" required />
     </form>
     <ul id="todo-list"></ul>
+
+    <!-- quotes -->
     <div id="quote">
       <span></span>
       <span></span>
     </div>
+
+    <!-- weather -->
     <div id="weather">
       <span></span>
       <span></span>
     </div>
+
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
